--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,4 +17,9 @@
       Play
     </button>
   </div>
+
+  <button mat-button [mat-menu-trigger-for]="menu" fxHide="false" fxHide.gt-sm>
+    <mat-icon>Menu</mat-icon>
+  </button>
+
 </mat-toolbar>
