--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,4 +35,8 @@
     <mat-icon>power_settings_new</mat-icon>
     Login
   </button>
+  <button mat-menu-item *ngIf="isAuthenticated" (click)="logout()">
+    <mat-icon>exit_to_app</mat-icon>
+    Logout
+  </button>
 </mat-menu>
