--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,1 +1,12 @@
-<p>game works!</p>
+<mat-card>
+    <mat-card-content fxLayout="column" fxLayoutAlign="center center">
+        <div gdColumns="repeat(3, 48px)" gdGap="1rem">
+            <div class="game-field" *ngFor="let field of gameState; let i = index" (click)="makeHumanMove(i)">
+                {{ field === 'X' || field === 'O' ? field : '' }}
+            </div>
+        </div>
+    </mat-card-content>
+</mat-card>
+<mat-card>
+
+</mat-card>
