Add a message in home and styli it

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<mat-card>
+    <mat-card-content fxLayout="column" fxLayoutAlign="center center" fxFlexFill>
+        <mat-toolbar color="primary">
+            Bem vindo ao jogo da velha.
+        </mat-toolbar>
+    </mat-card-content>
+</mat-card>
